force-app/main/default/objects/Response_PMT__c/Response_PMT__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>