force-app/main/default/objects/Response_PMT__c/fields/Most_Relevent_Response_PMT__c.field-meta.xml
<CustomField>
    <fullName>Most_Relevent_Response_PMT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Relevent Response</label>
    <type>Checkbox</type>
</CustomField>