force-app/main/default/objects/Response_PMT__c/fields/Query_PMT__c.field-meta.xml
<CustomField>
    <fullName>Query_PMT__c</fullName>
    <label>Query</label>
    <referenceTo>Query_PMT__c</referenceTo>
    <relationshipLabel>Response</relationshipLabel>
    <relationshipName>Response</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>