force-app/main/default/objects/Response_PMT__c/fields/Response_By_PMT__c.field-meta.xml
<CustomField>
    <fullName>Response_By_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>