force-app/main/default/objects/Response_PMT__c/fields/Response_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Response_Date_PMT__c</fullName>
    <label>Response Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>