force-app/main/default/objects/Response_PMT__c/fields/Response_PMT__c.field-meta.xml
<CustomField>
    <fullName>Response_PMT__c</fullName>
    <label>Response</label>
    <type>TextArea</type>
</CustomField>